Single-myosin thermal characterization: GPU drops MyosinFixed anchor spring
Planner pivot from per-step joint forensics to a minimal-system
reproduction: one anchored MyosinFixed, no filaments, no binding, J2=0.
500K steps × dt 1e-5, BOA_DIAG_SINGLE_MYO=1, seed 1.

Internal joint angles agree well (theta_RL -5.3°, theta_LM -0.14°),
but the head's absolute position diverges by a full body length:
  CPU head_r mean 0.061 µm, max 0.122 µm  (thermal tumbling about anchor)
  GPU head_r mean 0.533 µm, max 1.046 µm  (drifts > 10× the 0.108 µm contour)

Root cause: MyosinFixed.jointConstraints() = super.jointConstraints() +
applyRodFixedPtForce(). The second is the rod-tail anchor spring. The
GPU path short-circuits the per-Myosin CPU dispatch
(Myosin.MyosinThreads:77-88: useGPU && !DIAG_CPU_JOINTS sets all
jobDiv[i]=0), and the GPU jointsKernel has zero references to MyosinFixed
or applyRodFixedPtForce. The anchor spring is silently dropped.

This unifies every prior gliding-assay observation: the 55 nm head_z gap
unchanged between J2=0 and J2=0.1, the -42% bindEvents (J2=0) and -24%
(J2=0.1) drops, why DIAG_CPU_JOINTS passes (per-Myosin dispatch active),
why Part B CPU-side delta-add still failed (per-Myosin dispatch also
short-circuited), and why seven joint-only diagnostics came back clean.

Files added (default-off in production):
- Env.singleMyoDiag parameter (BOOLEAN, off)
- MyosinFixed.setUpSingleMyosinDiag() — one MyosinFixed at (0,0,zVal), +z
- BoxOfActin.makeInitialThings branches on singleMyoDiag
- SingleMyoDiag.java — Welford + histograms for theta_RL/LM, rod/lever/motor
  absolute tilt, head x/y/z, head radial. Gated by BOA_DIAG_SINGLE_MYO env var.
- ParameterFiles/singleMyoDiag — reusable standing diagnostic, J2 overridden to 0
- ParameterFiles/singleMyoDiag_smoke — 0.01 s smoke config
- RUN_LOGS/2026-05-31_singleMyo_{CPU,GPU,compare}.{log,txt}
- JOURNAL.md entry + head_z key-finding addendum to 2026-06-01 entry

Per task scope, fix not attempted. Next planne